kubernetes/apps/networking/nginx/misc/adguardhome-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adhome
  namespace: networking
  annotations:
    hajimari.io/icon: simple-icons:adguard
spec:
  ingressClassName: internal
  rules:
    - host: &host adhome.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: adhome
                port:
                  number: 80
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: adhome
  namespace: networking
subsets:
  - addresses:
      - ip: ${SECRET_ADGUARD_HOST}
    ports:
      - name: http
        port: 80
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: adhome
  namespace: networking
spec:
  ports:
    - name: http
      port: 80
  type: ClusterIP
