kubernetes/apps/networking/nginx/misc/nas-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas
  namespace: networking
  annotations:
    hajimari.io/icon: mdi:nas
spec:
  ingressClassName: internal
  rules:
    - host: &host nas.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nas
                port:
                  number: 2082
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nas
  namespace: networking
subsets:
  - addresses:
      - ip: ${SECRET_NAS_HOST}
    ports:
      - name: http
        port: 2082
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nas
  namespace: networking
spec:
  ports:
    - name: http
      port: 2082
  type: ClusterIP
